--- a/lavi/configs/datasets/cc3m/default.yaml
+++ b/lavi/configs/datasets/cc3m/default.yaml
@@ -8,4 +8,5 @@ datasets:
     dataset: cc3m
     split: train
     data_dir: '/content/drive/MyDrive/_pretrain'
-    part: 1 #[0,1,2,3,4,5,6,7,8,9]
+    part: 0 #[0,1,2,3,4,5,6,7,8,9]
+    instruction: True
