--- a/lavi/configs/datasets/cc3m/default.yaml
+++ b/lavi/configs/datasets/cc3m/default.yaml
@@ -9,4 +9,4 @@ datasets:
     split: train
     data_dir: '/content/drive/MyDrive/_pretrain'
     part: 0 #[0,1,2,3,4,5,6,7,8,9]
-    instruction: True
+    #instruction: True
